<resources>
    <string name="app_name">FitApkaHMS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alreadyHaveAnAccount_registration">Already have an account?</string>
    <string name="button_registration">Register</string>
    <string name="goBackToRegistration_login">Dont have an account yet?</string>
    <string name="button_login">Login</string>
    <string name="password_login">Password</string>
    <string name="email_login">Email</string>
    <string name="password_registration">Password</string>
    <string name="email_registration">Email</string>
    <string name="username_registration">Username</string>
    <string name="test_button">Test Button 1</string>
    <string name="test_button2">Test Button 2</string>
</resources>
